--- a/Ping host.yml
+++ b/Ping host.yml
@@ -1,6 +1,8 @@
 ---
-hosts: all
-gather:facts: yes
+- name: Ping all hosts
+  hosts: all
+  gather:facts: yes
 
-- name: Ping_host
-  ping:
+  tasks:
+  - name: Ping_host
+    ping:
