--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -4,7 +4,7 @@
   become: yes
   gather_facts: yes
 
-  Tasks:
+  tasks:
  
   - name: Create certificate private key on the server.
     openssl_privatekey:
