--- a/collections.yml
+++ b/collections.yml
@@ -2,3 +2,5 @@
 collections:
 - name: community.crypto
   source: https://galaxy.ansible.com
+- name: community.crypto.openssl_privatekey
+  source: https://galaxy.ansible.com
