--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -4,6 +4,13 @@
   become: yes
   gather_facts: yes
 
+  vars:
+    vars:
+      network:
+        api_username: '{{ lookup("env", "ANSIBLE_NET_USERNAME") }}'
+        api_password: '{{ lookup("env", "ANSIBLE_NET_PASSWORD") }}'
+
+
   tasks:
  
   - name: Create certificate private key on the server.
@@ -62,8 +69,8 @@
       requester_name: Harry Ansible
       requester_email: harry@wesentra.com
       requester_phone: 555-555-5555
-      entrust_api_user: '{{ANSIBLE_NET_USER}}'
-      entrust_api_key: '{{ANSIBLE_NET_PASSWORD}}'
+      entrust_api_user: '{{api_username}}'
+      entrust_api_key: '{{api_password}}'
       entrust_api_client_cert_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientCert.pem
       entrust_api_client_cert_key_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientKey.pem
     delegate_to: localhost
