--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -59,8 +59,8 @@
           in path and it is within 365 days of expiration, request a REISSUE of that
           certificate.
     ecs_certificate:
-      path: /home/azureuser/tmp/cert.pem
-      csr: /home/azureuser/tmp/csr.pem
+      path: /etc/ssl/certs/ansible-demo.crt
+      csr: /home/azureuser/csr.pem
       cert_type: PRIVATE_SSL
   #    cert_expiry: '2020-08-20'
       request_type: reissue
@@ -70,14 +70,14 @@
       requester_phone: 555-555-5555
       entrust_api_user: '{{api_user}}'
       entrust_api_key: '{{api_pass}}'
-      entrust_api_client_cert_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientCert.pem
-      entrust_api_client_cert_key_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientKey.pem
+  #    entrust_api_client_cert_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientCert.pem
+  #    entrust_api_client_cert_key_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientKey.pem
     delegate_to: localhost
 
   - name: Copy private key to Private key folder
     copy:
-      src: /home/weseroot/prvKey.pem
-      dest: /etc/apache2/ssl/ca.key
+      src: /home/azureuser/ansibledemo-keys/ansible-demo.key
+      dest: /etc/ssl/private/ansible-demo.key
       remote_src: yes
 
   - name: Copy certificate to Apache folder
