--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -2,9 +2,8 @@
 - name: Reissue Certificate
   hosts: all
   become: true
-  become_method: su
-  become_exe: sudo su -
   gather_facts: yes
+  become_exe: 'sudo -p "Password: " su -'
 
   vars:
     network:
