--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -73,7 +73,7 @@
       entrust_api_key: '{{api_pass}}'
   #    entrust_api_client_cert_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientCert.pem
   #    entrust_api_client_cert_key_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientKey.pem
-    delegate_to: localhost
+  # delegate_to: localhost
     
 
   - name: Copy private key to Private key folder
