--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -70,7 +70,7 @@
       requester_email: harry@wesentra.com
       requester_phone: 555-555-5555
       entrust_api_user: '{{api_user}}'
-      entrust_api_key: 34S4YB922I15JFE&QSBV+3=I
+      entrust_api_key: '{{api_pass}}'
   #    entrust_api_client_cert_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientCert.pem
   #    entrust_api_client_cert_key_path: /home/weseroot/.ansible/roles/thadreez.ecs_test/api_files/apiClientKey.pem
   # delegate_to: localhost
