--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -73,7 +73,7 @@
       entrust_api_key: '{{api_pass}}'
       entrust_api_client_cert_path: '{{ public_cert }}'
       entrust_api_client_cert_key_path: '{{ private_key }}'
-  # delegate_to: localhost
+    delegate_to: localhost
     
 
   - name: Copy private key to Private key folder
