--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -10,6 +10,10 @@
       api_username: '{{ lookup("env", "ANSIBLE_NET_USERNAME") }}'
       api_password: '{{ lookup("env", "ANSIBLE_NET_PASSWORD") }}'
 
+  
+      ansible_connection: winrm
+      ansible_winrm_cert_key_pem: '{{ "env", "MY_WINRM_KEY" }}'
+      ansible_winrm_cert_pem: '{{ "env", "MY_WINRM_CERT" }}'
 
   tasks:
  
@@ -69,8 +73,8 @@
       requester_name: Harry Ansible
       requester_email: harry@wesentra.com
       requester_phone: 555-555-5555
-      entrust_api_user: '{{api_user}}'
-      entrust_api_key: '{{api_pass}}'
+      entrust_api_user: '{{ api_user }}'
+      entrust_api_key: '{{ api_pass }}'
       entrust_api_client_cert_path: '{{ tower.filename.cert_file }}'
       entrust_api_client_cert_key_path: '{{ tower.filename.key_file }}'
     delegate_to: localhost
