--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -3,8 +3,8 @@
   hosts: all
   gather_facts: yes
   become: true
-  ansible_become_method: "su"
-  ansible_become_exe: 'sudo -p "Password: " su -'
+  become_method: "su"
+  become_exe: 'sudo -p "Password: " su -'
 
   vars:
     network:
