--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -75,8 +75,8 @@
       requester_phone: 555-555-5555
       entrust_api_user: '{{ api_user }}'
       entrust_api_key: '{{ api_pass }}'
-      entrust_api_client_cert_path: /home/azureuser/cagw_cert.pem
-      entrust_api_client_cert_key_path: /home/azureuser/cagw_key.key
+      entrust_api_client_cert_path: '{{ API_CLIENT_CERTIFICATE }}'
+      entrust_api_client_cert_key_path: '{{ API_PRIVATE_KEY }}'
     
     
 
