--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -33,12 +33,11 @@
       dest: /home/azureuser/ansibledemo_backups/cert.pem.{{ ansible_date_time.iso8601 }}
       remote_src: yes
 
-  - name: Copy the existing Cert to temporary file on localhost
-    fetch:
-      src: /etc/ssl/certs/ansible-demo.crt
-      dest: /home/azureuser/tmp/cert.pem
-      flat: true
-      fail_on_missing: false
+  #- name: Copy the existing Cert to temporary file on localhost
+   # fetch:
+    #  src: /etc/ssl/certs/ansible-demo.crt
+     # dest: /home/azureuser/tmp/cert.pem
+      #fail_on_missing: false
 
   - name: Create certificate signing request on the server
     openssl_csr:
