--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -64,7 +64,7 @@
           certificate.
     become: false
       
-    community.crypto.ecs_certificate:
+    ecs_certificate:
       path: /home/azureuser/tmp/csr.pem
       csr: /home/azureuser/tmp/csr.pem
       cert_type: PRIVATE_SSL
