--- a/collections/requirements.yaml
+++ b/collections/requirements.yaml
@@ -1,5 +1,7 @@
 collections:
   - name: community.crypto
     source: https://galaxy.ansible.com
-  - name: community.crypto.ecs_certificate
-    source: https://galaxy.ansible.com     
+    
+  - name: community.crypto.openssl_privatekey
+    source: https://galaxy.ansible.com
+     
