--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -6,11 +6,11 @@
   
 
   vars:
-    network:
+    User-Pass:
       api_username: '{{ lookup("env", "ANSIBLE_NET_USERNAME") }}'
       api_password: '{{ lookup("env", "ANSIBLE_NET_PASSWORD") }}'
 
-  
+    client certificate:
       api_certificate: '{{ lookup("env", "API_CLIENT_CERTIFICATE") }}'
       api_private_key: '{{ lookup("env", "API_PRIVATE_KEY") }}'
 
@@ -76,8 +76,8 @@
       requester_phone: 555-555-5555
       entrust_api_user: '{{ api_user }}'
       entrust_api_key: '{{ api_pass }}'
-      entrust_api_client_cert_path: /home/azureuser/ecsapi.pem
-      entrust_api_client_cert_key_path: /home/azureuser/api_key.key
+      entrust_api_client_cert_path: {{ public_cert }}
+      entrust_api_client_cert_key_path: {{ private_key }}
     delegate_to: localhost
     
 
