--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -30,11 +30,11 @@
       dest: /home/azureuser/ansibledemo_backups/cert.pem.{{ ansible_date_time.iso8601 }}
       remote_src: yes
 
-  #- name: Copy the existing Cert to temporary file on localhost
-   # fetch:
-    #  src: /etc/ssl/certs/ansible-demo.crt
-     # dest: /home/azureuser/tmp/cert.pem
-      #fail_on_missing: false
+  - name: Copy the existing Cert to temporary file on localhost
+    fetch:
+     src: /etc/ssl/certs/ansible-demo.crt
+     dest: /home/azureuser/tmp/cert.pem
+     fail_on_missing: false
 
   - name: Create certificate signing request on the server
     openssl_csr:
@@ -51,7 +51,7 @@
   - name: Copy the CSR to temporary file on localhost
     fetch:
       src: /home/azureuser/tmp/csr.pem
-      dest: /tmp/csr.pem
+      dest: /home/azureuser/tmp/csr.pem
       flat: true
       fail_on_missing: false
 
@@ -84,10 +84,10 @@
       dest: /etc/ssl/private/ansible-demo.key
       remote_src: yes
 
- # - name: Copy certificate to Apache folder
- #   copy:
- #    src: /home/weseroot/tmp/cert.pem
- #    dest: /etc/apache2/ssl/ca.crt
+  - name: Copy certificate to Apache folder
+    copy:
+     src: /home/weseroot/tmp/cert.pem
+     dest: /etc/apache2/ssl/ca.crt
 
   - name: restart Ngninx
     service:
