--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -49,6 +49,7 @@
       state_or_province_name: Keski-Suomi
 
   - name: Copy the CSR to temporary file on localhost
+    become_user: root
     fetch:
       src: /home/azureuser/tmp/csr.pem
       dest: /home/azureuser/tmp/csr.pem
