--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -33,12 +33,12 @@
   - name: Copy the existing Cert to temporary file on localhost
     fetch:
      src: /etc/ssl/certs/ansible-demo.crt
-     dest: /home/azureuser/tmp/cert.pem
+     dest: /tmp/cert.pem
      fail_on_missing: false
 
   - name: Create certificate signing request on the server
     openssl_csr:
-      path: /home/azureuser/tmp/csr.pem
+      path: /tmp/csr.pem
       privatekey_path: /etc/ssl/private/ansible-demo.key
  #     privatekey_passphrase: 'ansible'
       digest: sha256
