--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -30,11 +30,12 @@
       dest: /home/azureuser/ansibledemo_backups/cert.pem.{{ ansible_date_time.iso8601 }}
       remote_src: yes
 
-  #- name: Copy the existing Cert to temporary file on localhost
-   # fetch:
-    # src: /etc/ssl/certs/ansible-demo.crt
-     #dest: /tmp/cert.pem
-     #fail_on_missing: false
+  - name: Copy the existing Cert to temporary file on localhost
+    become_user: root
+    fetch:
+     src: /etc/ssl/certs/ansible-demo.crt
+     dest: /tmp/ansible-demo.pem
+     fail_on_missing: false
 
   - name: Create certificate signing request on the server
     openssl_csr:
@@ -63,7 +64,7 @@
     become: false
       
     ecs_certificate:
-      path: /tmp/csr.pem
+      path: /tmp/ansible-demo.pem
       csr: /tmp/csr.pem
       cert_type: PRIVATE_SSL
   #    cert_expiry: '2020-08-20'
@@ -88,7 +89,7 @@
   - name: Copy certificate to Apache folder
     copy:
      src: /home/weseroot/tmp/cert.pem
-     dest: /etc/apache2/ssl/ca.crt
+     dest: /etc/ssl/certs/ansible-demo.crt
 
   - name: restart Ngninx
     service:
