--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -32,11 +32,12 @@
       remote_src: yes
 
   - name: Copy the existing Cert to temporary file on localhost
-    become_user: azureuser
     fetch:
-     src: /etc/ssl/certs/ansible-demo.crt
-     dest: home/azureuser/tmp/ansible-demo.pem
-     fail_on_missing: false
+      src: /etc/ssl/certs/ansible-demo.crt
+      dest: home/azureuser/tmp/ansible-demo.pem
+      fail_on_missing: false
+    become: true
+    become_user: root
 
   - name: Create certificate signing request on the server
     openssl_csr:
@@ -51,12 +52,14 @@
       state_or_province_name: Keski-Suomi
 
   - name: Copy the CSR to temporary file on localhost
-    become_user: azureuser
     fetch:
       src: /home/azureuser/tmp/csr.pem
       dest: /home/azureuser/tmp/csr.pem
       flat: true
       fail_on_missing: false
+    become: true
+    become_user: root
+    become_exe: sudo
 
   - name: If there is no certificate present in path, request a new certificate
           of type PRIVATE_SSL. Otherwise, if there is an Entrust managed certificate
