--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -34,15 +34,15 @@
   - name: Copy the existing Cert to temporary file on localhost
     fetch:
       src: /etc/ssl/certs/ansible-demo.crt
-      dest: home/azureuser/tmp/ansible-demo.pem
+      dest: /tmp/ansible-demo.pem
       fail_on_missing: false
-    become: false
+    become: true
     
 
   - name: Create certificate signing request on the server
     openssl_csr:
       path: /home/azureuser/tmp/csr.pem
-      privatekey_path: /etc/ssl/private/ansible-demo.key
+      privatekey_path: /homr/azureuser/tmp/ansible-demo.key
  #     privatekey_passphrase: 'ansible'
       digest: sha256
       common_name: ansible-demo.wesentra.com
@@ -54,10 +54,10 @@
   - name: Copy the CSR to temporary file on localhost
     fetch:
       src: /home/azureuser/tmp/csr.pem
-      dest: /home/azureuser/tmp/csr.pem
+      dest: /tmp/csr.pem
       flat: true
       fail_on_missing: false
-    become: false
+    become: true
     
 
   - name: If there is no certificate present in path, request a new certificate
@@ -67,8 +67,8 @@
     become: false
       
     ecs_certificate:
-      path: /home/azureuser/tmp/ansible-demo.pem
-      csr: /home/azureuser/tmp/csr.pem
+      path: /tmp/ansible-demo.pem
+      csr: /tmp/csr.pem
       cert_type: PRIVATE_SSL
   #    cert_expiry: '2020-08-20'
       request_type: reissue
