--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -34,15 +34,15 @@
   - name: Copy the existing Cert to temporary file on localhost
     fetch:
       src: /etc/ssl/certs/ansible-demo.crt
-      dest: /tmp/ansible-demo.pem
+      dest: /home/azureuser/ansible-demo.pem
       fail_on_missing: false
     become: true
     
 
   - name: Create certificate signing request on the server
     openssl_csr:
-      path: /home/azureuser/tmp/csr.pem
-      privatekey_path: /home/azureuser/tmp/ansible-demo.key
+      path: /home/azureuser/csr.pem
+      privatekey_path: /home/azureuser/ansible-demo.key
  #     privatekey_passphrase: 'ansible'
       digest: sha256
       common_name: ansible-demo.wesentra.com
@@ -54,7 +54,7 @@
   - name: Copy the CSR to temporary file on localhost
     fetch:
       src: /home/azureuser/tmp/csr.pem
-      dest: /tmp/csr.pem
+      dest: /home/azureuser/csr.pem
       flat: true
       fail_on_missing: false
     become: true
