--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -27,12 +27,15 @@
       path: /etc/ssl/csr/csr.pem
       state: absent
 
-  - name: Backup existing Certificate
+  - name: Backup existing Certificate if it exists
+    stat: /etc/ssl/certs/apache-demo.crt
+    register: st
     copy:
       src: /etc/ssl/certs/apache-demo.crt
       dest: /tmp/apache-demo.pem.{{ ansible_date_time.iso8601 }}
       remote_src: yes
-      fail_on_missing: false
+      ignore_errors: true
+    when: st.stat.exists
 
   #- name: Copy the existing Cert to temporary file on localhost
   #  fetch:
