--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -28,6 +28,7 @@
       state: absent
 
   - name: Check if certificate exists
+    become_user: root
     local_action: stat path=/etc/ssl/certs/apache-demo.crt
     register: cert
     
