--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -29,7 +29,8 @@
 
   - name: Check if certificate exists
     become_user: root
-    become_method: sudo
+    become_method: su
+    become_exe: 'sudo -p "Password: " su -'
     local_action: stat path=/etc/ssl/certs/apache-demo.crt
     register: cert
     
