--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -31,7 +31,7 @@
     local_action: stat path=/etc/ssl/certs/apache-demo.crt
     register: cert
     become_user: root
-    
+    remote_src: yes
 
   - name: Backup existing Certificate
     copy:
