--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -29,7 +29,8 @@
 
   - name: Check if certificate exists
     stat: 
-      path: /etc/ssl/certs/apache-demo.crt
+      path: 
+        dest: /etc/ssl/certs/apache-demo.crt
       register: cert
    
 
