--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -27,6 +27,7 @@
     ansible.builtin.file:
       path: /etc/ssl/csr/csr.pem
       state: absent
+    become_user: roots
 
   - name: Check if certificate exists
     stat: 
