--- a/print_variable.yml
+++ b/print_variable.yml
@@ -4,4 +4,4 @@
   msg:
   - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
   - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
-  
+  delegate_to: local  
