--- a/Show_variable.yml
+++ b/Show_variable.yml
@@ -1,6 +1,6 @@
 ---
-
 - name: Print Enviromental variables 
+  hosts: all
   msg:
   - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
   - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
